Fix controller paths.
